Ruta imagen telefonos arreglada

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <section class="hero-section mb-10 mb-lg-0 w-100">
     <article class="hero-images w-100">
       <img srcset="images/bg-intro-desktop.svg, images/bg-intro-mobile.svg 2x" alt="Hero Image">
-      <img src="/images/image-mockups.png" alt="Mobile Hero">
+      <img src="images/image-mockups.png" alt="Mobile Hero">
     </article>
     <article class="hero-text">
       <article class="container">
